Fixed Emoticon Vertical Alignment

--- a/src/components/EmoticonRow.scss
+++ b/src/components/EmoticonRow.scss
@@ -25,4 +25,5 @@
 	user-select: none;
 	writing-mode: vertical-rl;
 	text-orientation: upright;
+	vertical-align: middle;
 }
